# carbin

./: README.md  setup.cfg  setup.py
example/: CMakeLists.txt  setup.cfg
example/bindings_pybind11/: CMakeLists.txt
src/carbin/: __init__.py  __main__.py
src/carbin/cmake/: __init__.py  build_ext_option.py  build_extension.py  cmake_extension.py  sdist_command.py
src/carbin/conda/: __init__.py  __main__.py  __version__.py  setuptools_conda.py
src/carbin/pkg/: __init__.py  cmake.py  pypkg.py  utils.py
src/carbin/share/cmake/: CMakeLists.txt  pyproject.toml  setup.cfg  setup.py.txt
src/carbin/share/cmake/conda/: meta.yaml
