
################################################################
#
# Copyright (c) 2022, liyinbin
# All rights reserved.
# Author by liyibin (jeff.li)
#
#################################################################


[options]
zip_safe = False
python_requires = >=3.6
install_requires =
    cmake
    ninja
    GitPython
    setuptools_scm
    click


